Fix Author block button removal and image placeholder alignment (#1822)
* add new icon and remove template lock

* tweak style

--- a/src/blocks/author/styles/editor.scss
+++ b/src/blocks/author/styles/editor.scss
@@ -54,11 +54,15 @@
 				box-shadow: 0 0 0 1px $white, 0 0 0 3px var(--wp-admin-theme-color);
 			}
 
-			svg {
-				margin: auto auto;
-				pointer-events: none;
-				transform: translate3d(0, 0, 0);
-				transition: transform 100ms cubic-bezier(0.645, 0.045, 0.355, 1);
+			.block-editor-block-icon {
+				margin: auto;
+
+				svg {
+					margin: auto auto;
+					pointer-events: none;
+					transform: translate3d(0, 0, 0);
+					transition: transform 100ms cubic-bezier(0.645, 0.045, 0.355, 1);
+				}
 			}
 		}
 	}
